--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 
     <!-- Header -->
     <header id="header">
-        <h1><a href="index.html"><strong>{{ site.header.title }}</strong> {{ site.header.subtitle }}1</a></h1>
+        <h1><a href="index.html"><strong>{{ site.header.title }}</strong></a> por <a href="https://nunogand.com">{{ site.header.subtitle }}</a></h1>
         <nav>
             <ul>
                 <li><a href="#footer" class="icon fa-info-circle">Sobre</a></li>
