--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@ layout: default
         {% if image.path contains 'fulls' %}
         <article class="thumb">
             <a href="{{ site.baseurl }}{{ site.image_fulls_loc }}/{{ image.name }}" class="image">
-                <img src="{{ site.baseurl }}{{ site.image_thumbs_loc }}/{{ image.name }}" alt=""
-                     data-name="{{ image.name }}"/></a>
+                <img src="{{ site.baseurl }}{{ site.image_thumbs_loc }}/{{ image.name }}" alt="{{ image.name }}" data-name="{{ image.name }}"/></a>
             <!--<h2></h2>
             <p></p>-->
         </article>
